--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
 before_script:
   - gem install bundler
   - bundle install
+  - curl https://rclone.org/install.sh | sudo bash -s beta
 
 test:
   stage: test
