--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,10 @@ variables:
 before_script:
   - gem install bundler
   - bundle install
-  - curl https://rclone.org/install.sh | sudo bash -s beta
+  - curl -O ../rclone.zip https://downloads.rclone.org/rclone-current-linux-amd64.zip
+  - unzip ../rclone.zip
+  - mv ../rclone/rclone ./
+  - chmod 755 rclone
 
 test:
   stage: test
@@ -23,7 +26,7 @@ pages:
   stage: deploy
   script:
   - echo $RCLONE_CONFIG_B64 | base64 -d > rclone.conf
-  - rclone --config rclone.conf sync dropbox_blog_posts:/blog_posts ./_posts
+  - ./rclone --config rclone.conf sync dropbox_blog_posts:/blog_posts ./_posts
   - bundle exec jekyll build -d public
   artifacts:
     paths:
