--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
   - bundle install
   - curl -o ../rclone.zip https://downloads.rclone.org/rclone-current-linux-amd64.zip
   - unzip ../rclone.zip
-  - mv ../rclone/rclone ./
+  - mv ../rclone-*-linux-amd64/rclone ./
   - chmod 755 rclone
 
 test:
