Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ before_script:
   - gem install bundler
   - bundle install
   - curl -o ../rclone.zip https://downloads.rclone.org/rclone-current-linux-amd64.zip
-  - unzip ../rclone.zip
-  - mv ../rclone-*-linux-amd64/rclone ./
+  - unzip ../rclone.zip -d rclone-linux-amd64
+  - mv ../rclone-linux-amd64/rclone ./
   - chmod 755 rclone
 
 test:
