Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ test:
 pages:
   stage: deploy
   script:
-  - echo $RCLONE_CONFIG_B64 | base64 -d > rclone.conf
+  - echo "$RCLONE_CONFIG_B64" | base64 -d > rclone.conf
   - ./rclone --config rclone.conf sync dropbox_blog_posts:/blog_posts ./_posts
   - bundle exec jekyll build -d public
   artifacts:
