--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ pages:
   script:
   - echo "$RCLONE_CONFIG_B64" | base64 -d > rclone.conf
   - ./rclone -v --config rclone.conf sync dropbox_blog_posts:/blog_posts ./_posts
+  - ls -a ./_posts
   - bundle exec jekyll build -d public
   artifacts:
     paths:
