--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ pages:
   - echo "$RCLONE_CONFIG_B64" | base64 -d > rclone.conf
   - ./rclone -v --config rclone.conf sync dropbox_blog_posts:/blog_posts ./_posts
   - ls -a ./_posts
+  - (cd _posts && for i in *' '*; do   mv "$i" `echo $i | sed -e 's/ /-/g'`; done)
   - bundle exec jekyll build -d public
   artifacts:
     paths:
