--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,18 @@ test:
 pages:
   stage: deploy
   script:
+  - echo [=] Setting up rclone....
   - echo "$RCLONE_CONFIG_B64" | base64 -d > rclone.conf
-  - ./rclone -v --config rclone.conf --include "*.md" --exclude assets/* sync dropbox_blog_posts:/blog_posts ./_posts
+  - echo [=] Syncing posts and assets....
+  - ./rclone -v --config rclone.conf --include "*.md" --exclude "/assets/**" sync dropbox_blog_posts:/blog_posts ./_posts
   - ./rclone -v --config rclone.conf sync dropbox_blog_posts:/blog_posts/assets ./assets
+  - rm -fr ./_posts/.git ./_posts/.zettel-notes
+  - echo [=] Posts have been synced....
   - ls -a ./_posts
   - (cd _posts && for i in *' '*; do   mv "$i" `echo $i | sed -e 's/ /-/g'`; done)
+  - echo [=] Building....
   - bundle exec jekyll build -d public
+  - echo [=] Publishing....
   artifacts:
     paths:
     - public
