--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,6 @@
 name: 'Continuous Integration'
 on:
-  push:
-    branches-ignore:
-      - 'release/**'
-      - 'docs'
-    tags-ignore:
-      - '**'
-    paths-ignore:
-      - '.github/**'
-      - '!.github/workflows/ci.yml'
-      - '.travis.yml'
-      - '.gitignore'
-      - 'README.md'
-      - 'LICENSE'
-  pull_request:
-    paths:
-      - '**'
+  [ push, workflow_dispatch ]
 
 jobs:
   ci:
