--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,5 @@
 name: 'Continuous Integration'
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - master
+on: [ workflow_dispatch, push ]
 
 jobs:
   ci:
