--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: Github Pages
 
 on:
-  push:
-    branches:
-      - master  # Here source code branch is `master`, it could be other branch
+#   push:
+#     branches:
+#       - master  # Here source code branch is `master`, it could be other branch
   workflow_dispatch:
 
 jobs:
